change project name for build add template messages

--- a/web-project/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/template.xhtml
@@ -26,6 +26,7 @@
 
             <div class="layout-main">        
                 <div class="layout-content" style="min-height:300px">
+                	<p:messages autoUpdate="true"/>
                     <ui:insert name="content"></ui:insert>
                 </div>
             </div>
