--- a/web-project/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/template.xhtml
@@ -26,7 +26,9 @@
 
             <div class="layout-main">        
                 <div class="layout-content" style="min-height:300px">
-                	<p:messages autoUpdate="true"/>
+                	<p:messages>
+                		<p:autoUpdate/>
+                	</p:messages>
                     <ui:insert name="content"></ui:insert>
                 </div>
             </div>
