--- a/web-project/src/main/webapp/WEB-INF/footer.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/footer.xhtml
@@ -7,13 +7,13 @@
         </div>
         <div class="ui-g-6 footer-icons">
             <a href="#">
-                <i class="fa fa-twitter"></i>
+                <i class="fab fa-twitter"></i>
             </a>
             <a href="#">
-                <i class="fa fa-facebook"></i>
+                <i class="fab fa-facebook-square"></i>
             </a>
             <a href="#">
-                <i class="fa fa-instagram"></i>
+                Rental Data System Version <h:outputText value="#{guestPreferences.projectVersion}"/>
             </a>
         </div>
     </div>
