--- a/web-project/src/main/webapp/WEB-INF/menu.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/menu.xhtml
@@ -10,7 +10,7 @@
             <div class="nano-content menu-scroll-content">
                 <h:form id="menuform">
                     <po:menu>
-                        <p:menuitem id="om_dashboard" value="DASHBOARD" icon="fa fa-fw fa-dashboard" outcome="/dashboard" />
+                        <p:menuitem id="om_dashboard" value="DASHBOARD" icon="fas fa-tachometer-alt" outcome="/dashboard" />
                         
                         <p:submenu rendered="false" id="om_components" label="COMPONENTS" icon="fa fa-fw fa-bars">
                             <p:menuitem id="om_sample" value="Sample Page" icon="fa fa-fw fa-columns" outcome="/sample" />
