dashboard with boxplot

--- a/web-project/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/template.xhtml
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 	</f:facet>
-	<title><ui:insert name="title">PrimeFaces Olympia</ui:insert></title>
+	<title><ui:insert name="title">Rental Data</ui:insert></title>
 	<h:outputScript name="js/nanoscroller.js" library="olympia-layout" />
 	<h:outputScript name="js/layout.js" library="olympia-layout" />
 	<script src="https://kit.fontawesome.com/4291e33fa8.js"></script>
