--- a/web-project/src/main/webapp/dashboard.xhtml
+++ b/web-project/src/main/webapp/dashboard.xhtml
@@ -74,7 +74,8 @@
 						<div class="ui-g-12 ui-lg-6 projects">
 							<div class="section-title">Charts</div>
 							<div class="card project">
-								<div class="project-title">OTHER CHART</div>
+								<div class="project-title">BOXPLOT CHART (OUTLIERS)</div>
+								<ui:include src="chart_boxplot.xhtml" />
 							</div>
 						</div>
 
