Python Text Mining Module

--- a/web-project/src/main/webapp/dashboard.xhtml
+++ b/web-project/src/main/webapp/dashboard.xhtml
@@ -11,7 +11,7 @@
 			<div class="ui-g">
 				<div class="ui-g-12 ui-md-3">
 					<div class="intro-box">
-						<div class="intro-box-name intro-box-greeting">Rental Data</div>
+						<div class="intro-box-name intro-box-greeting">Vancouver Property Rental Data Analytics and Tool</div>
 						<div class="intro-box-detail">System Dashboard</div>
 						<div class="intro-box-detail">
 						<p:separator></p:separator>
