--- a/web-project/src/main/webapp/chart_boxplot_bdr.xhtml
+++ b/web-project/src/main/webapp/chart_boxplot_bdr.xhtml
@@ -5,11 +5,11 @@
 
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-	<div id="chart_boxplot"></div>
+	<div id="chart_boxplot_bdr"></div>
 
 	<script type="text/javascript">
 		/* <![CDATA[ */
-		var xData = [ 'Rent Price'];
+		var xData = [ 'Number of Bedrooms'];
 		function getrandom(num, mul) {
 			var value = []
 			for (i = 0; i <= num; i++) {
@@ -19,7 +19,7 @@
 			return value
 		}
 		
-		var yData = [ #{dataAnalysisBean.getPricesArray()}];
+		var yData = [ #{dataAnalysisBean.getBedroomsArray()}];
 
 		var colors = [ 'rgba(93, 164, 214, 0.5)', 'rgba(255, 144, 14, 0.5)',
 				'rgba(44, 160, 101, 0.5)', 'rgba(255, 65, 54, 0.5)',
@@ -71,7 +71,7 @@
 			showlegend : false
 		};
 
-		Plotly.newPlot('chart_boxplot', data, layout, {
+		Plotly.newPlot('chart_boxplot_bdr', data, layout, {
 			showSendToCloud : false
 		});
 		/* ]]> */
