--- a/web-project/src/main/webapp/boxplots.xhtml
+++ b/web-project/src/main/webapp/boxplots.xhtml
@@ -22,22 +22,13 @@
 						<div class="ui-g-12 ui-lg-6 projects">
 							<div class="section-title">Number of Bedrooms</div>
 							<div class="card project">
-								<h:form>
-									<h1>Calendar</h1>
-									<p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank form-group" style="margin-top:10px">
-										<p:outputLabel value="Lower/Upper Limit:" />
-										<p:slider for="txt6,txt7" display="displayRange" range="true" displayTemplate="Between {min} and {max}" minValue="0" maxValue="50000" style="margin-top:15px" />
-									</p:panelGrid>
-								</h:form>
-								<div class="project-title">BOXPLOT CHART (OUTLIERS)</div>
 								<ui:include src="chart_boxplot_bdr.xhtml" />
 							</div>
 						</div>
 						<div class="ui-g-12 ui-lg-6 projects">
 							<div class="section-title">Rent Price</div>
 							<div class="card project">
-								<div class="project-title">BOXPLOT CHART (OUTLIERS)</div>
-								<ui:include src="chart_boxplot.xhtml" />
+								<ui:include src="chart_boxplot_price.xhtml" />
 							</div>
 						</div>
 
