--- a/web-project/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-project/src/main/webapp/WEB-INF/template.xhtml
@@ -34,7 +34,7 @@
 
 		<div class="layout-main">
 			<div class="layout-content" style="min-height: 300px">
-				<p:messages>
+				<p:messages closable="true">
 					<p:autoUpdate />
 				</p:messages>
 				<div class="ui-g">
